[gd_scene load_steps=8 format=3 uid="uid://cysak54jo4at3"]

[ext_resource type="PhysicsMaterial" uid="uid://bdp45weligtix" path="res://poolballmaterial.tres" id="1_n3dws"]
[ext_resource type="Script" path="res://root.gd" id="1_vknud"]
[ext_resource type="Script" path="res://normalball.gd" id="3_pqcnd"]
[ext_resource type="Texture2D" uid="uid://br74yvsgdl1lh" path="res://srko.png" id="3_yhhcs"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5x4fs"]
bounce = 0.1

[sub_resource type="CircleShape2D" id="CircleShape2D_v10cv"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_fjico"]
radius = 32.0

[node name="root" type="Node2D"]
script = ExtResource("1_vknud")
cue_force = 1500.0

[node name="Table" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_5x4fs")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table"]
polygon = PackedVector2Array(64, 64, 56, 96, 64, 128, 96, 144, 96, 504, 64, 520, 56, 552, 64, 584, 96, 592, 128, 584, 144, 552, 536, 552, 544, 576, 576, 592, 608, 576, 616, 552, 1008, 552, 1024, 584, 1056, 592, 1088, 584, 1096, 552, 1088, 520, 1056, 504, 1056, 144, 1088, 128, 1096, 96, 1088, 64, 1056, 56, 1024, 64, 1008, 96, 616, 96, 608, 72, 576, 56, 544, 72, 536, 96, 144, 96, 128, 64, 96, 56, 64, 64, 0, 0, 1152, 0, 1152, 648, 0, 648, 0, 0)

[node name="Polygon2D" type="Polygon2D" parent="Table"]
color = Color(0.411765, 0.411765, 0.411765, 1)

[node name="cueball root" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="cueball" type="RigidBody2D" parent="cueball root"]
position = Vector2(320, 320)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
max_contacts_reported = 2
contact_monitor = true
linear_damp = 0.5

[node name="Sprite2D" type="Sprite2D" parent="cueball root/cueball"]
modulate = Color(0.65098, 0.65098, 0.65098, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="cueball root/cueball"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(1, 1, 1, 0.419608)

[node name="guidepoint" type="Marker2D" parent="cueball root"]

[node name="guideline" type="Line2D" parent="cueball root"]
points = PackedVector2Array(0, 0, 0, 0)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="DebugLabel" type="Label" parent="."]
offset_left = 176.0
offset_top = 108.0
offset_right = 216.0
offset_bottom = 131.0

[node name="NormalBalls" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ball1" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(832, 320)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
max_contacts_reported = 2
contact_monitor = true
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball1"]
modulate = Color(0.803922, 0.682353, 0, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball1"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(0.803922, 0.682353, 0, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball1"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➊"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball2" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(804, 304)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball2"]
modulate = Color(0.160784, 0.368627, 1, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball2"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(0.286275, 0.486275, 1, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball2"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➋"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball3" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(804, 336)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 3
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball3"]
modulate = Color(1, 0.231373, 0.219608, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball3"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(1, 0.231373, 0.219608, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball3"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➌"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball4" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(776, 288)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 4
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball4"]
modulate = Color(0.760784, 0.137255, 1, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball4"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(0.760784, 0.137255, 1, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball4"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➍"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball5" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(776, 352)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 5
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball5"]
modulate = Color(0.811765, 0.392157, 0, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball5"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(0.811765, 0.392157, 0, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball5"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➎"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball6" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(748, 304)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 6
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball6"]
modulate = Color(0, 0.643137, 0.0627451, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball6"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(0, 0.643137, 0.0627451, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball6"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➏"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball7" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(748, 336)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 7
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball7"]
modulate = Color(0.603922, 0.0980392, 0, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball7"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(0.603922, 0.0980392, 0, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball7"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➐"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball8" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(720, 320)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 8
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball8"]
modulate = Color(0.270588, 0.270588, 0.270588, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball8"]
visible = false
modulate = Color(0.396078, 0.396078, 0.396078, 0.988235)
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(0.396078, 0.396078, 0.396078, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball8"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➑"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ball9" type="RigidBody2D" parent="NormalBalls"]
position = Vector2(776, 320)
physics_material_override = ExtResource("1_n3dws")
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource("3_pqcnd")
ball_ID = 9
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NormalBalls/ball9"]
modulate = Color(0.8, 0.8, 0, 1)
scale = Vector2(0.0444445, 0.0444445)
texture = ExtResource("3_yhhcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalBalls/ball9"]
shape = SubResource("CircleShape2D_v10cv")
debug_color = Color(1, 1, 0, 0.419608)

[node name="Label" type="Label" parent="NormalBalls/ball9"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 24
text = "➒"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Pockets" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Pocket1" type="StaticBody2D" parent="Pockets" groups=["pocket"]]
position = Vector2(92, 92)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pockets/Pocket1"]
shape = SubResource("CircleShape2D_fjico")
debug_color = Color(0.533333, 0.537255, 0.541176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Pockets/Pocket1"]
modulate = Color(0.168627, 0.168627, 0.168627, 1)
scale = Vector2(0.0888889, 0.0888889)
texture = ExtResource("3_yhhcs")

[node name="Pocket2" type="StaticBody2D" parent="Pockets" groups=["pocket"]]
position = Vector2(576, 92)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pockets/Pocket2"]
shape = SubResource("CircleShape2D_fjico")
debug_color = Color(0.533333, 0.537255, 0.541176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Pockets/Pocket2"]
modulate = Color(0.168627, 0.168627, 0.168627, 1)
scale = Vector2(0.0888889, 0.0888889)
texture = ExtResource("3_yhhcs")

[node name="Pocket3" type="StaticBody2D" parent="Pockets" groups=["pocket"]]
position = Vector2(1060, 92)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pockets/Pocket3"]
shape = SubResource("CircleShape2D_fjico")
debug_color = Color(0.533333, 0.537255, 0.541176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Pockets/Pocket3"]
modulate = Color(0.168627, 0.168627, 0.168627, 1)
scale = Vector2(0.0888889, 0.0888889)
texture = ExtResource("3_yhhcs")

[node name="Pocket4" type="StaticBody2D" parent="Pockets" groups=["pocket"]]
position = Vector2(1060, 556)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pockets/Pocket4"]
shape = SubResource("CircleShape2D_fjico")
debug_color = Color(0.533333, 0.537255, 0.541176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Pockets/Pocket4"]
modulate = Color(0.168627, 0.168627, 0.168627, 1)
scale = Vector2(0.0888889, 0.0888889)
texture = ExtResource("3_yhhcs")

[node name="Pocket5" type="StaticBody2D" parent="Pockets" groups=["pocket"]]
position = Vector2(576, 556)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pockets/Pocket5"]
shape = SubResource("CircleShape2D_fjico")
debug_color = Color(0.533333, 0.537255, 0.541176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Pockets/Pocket5"]
modulate = Color(0.168627, 0.168627, 0.168627, 1)
scale = Vector2(0.0888889, 0.0888889)
texture = ExtResource("3_yhhcs")

[node name="Pocket6" type="StaticBody2D" parent="Pockets" groups=["pocket"]]
position = Vector2(92, 556)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pockets/Pocket6"]
shape = SubResource("CircleShape2D_fjico")
debug_color = Color(0.533333, 0.537255, 0.541176, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Pockets/Pocket6"]
modulate = Color(0.168627, 0.168627, 0.168627, 1)
scale = Vector2(0.0888889, 0.0888889)
texture = ExtResource("3_yhhcs")

[node name="ShotWaitTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="reset_table" from="." to="NormalBalls/ball1" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball2" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball3" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball4" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball5" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball6" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball7" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball8" method="_on_root_reset_table"]
[connection signal="reset_table" from="." to="NormalBalls/ball9" method="_on_root_reset_table"]
